fixed full name font size and overflowing iframe

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -92,13 +92,11 @@ section {
 .main {
 	@extend .light-section;
 	font-size: 2.25rem;
+}
 
+.fullName {
 	@media (max-width: $mobile-break) {
-		.content {
-			h3 {
-				font-size: 1.3rem;
-			}
-		}
+		font-size: 1.3rem;
 	}
 }
 
@@ -391,4 +389,19 @@ footer {
 .post-summary-author {
 	@extend .testimonial-author;
 	margin: 1em 0;
+}
+
+
+.mapWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.mapWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
